<resources>
    <string name="app_name">My Dairys Ink</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="register_fragment_label">Register Fragment</string>
    <string name="list_fragment_label">List Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="login_form_title">Login</string>
    <string name="login_form_username">Username</string>
    <string name="login_form_email">Email</string>
    <string name="login_form_password">Password</string>
    <string name="login_form_login">Login</string>

    <string name="signup_title">Sign Up</string>
    <string name="signup_form_username">Username</string>
    <string name="signup_form_email">Email</string>
    <string name="signup_form_password">Password</string>
    <string name="signup_form_retype_password">Retype Password</string>
    <string name="signup_form_button">Sign Up</string>


    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="title_activity_writing3">WritingActivity3</string>
    <string name="title_activity_main3">MainActivity3</string>


</resources>