<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.finalproject.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>
    <fragment
        android:id="@+id/MainFragment"
        android:name="com.example.finalproject.MainFragment"
        tools:layout="@layout/fragment_main">


    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.finalproject.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
    </fragment>
    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.example.finalproject.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_SecondFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListFragment"
        android:name="com.example.finalproject.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list">

    </fragment>
</navigation>