<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efebe8"
    android:textAlignment="center"
    android:orientation="vertical"
    tools:context=".SecondFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/reallyfree"
            android:text="@string/login_form_title"
            android:textAlignment="center"
            android:textColor="#7b356d"
            android:textSize="60sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#7b356d"
            android:fontFamily="@font/reallyfree"
            android:text="@string/login_form_email"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:textColor="#7b356d"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/reallyfree"
            android:textColor="#7b356d"
            android:text="@string/login_form_password"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#7b356d"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:fontFamily="@font/reallyfree"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="30sp" />

    </LinearLayout>




</LinearLayout>